# pymanager

./: .gitignore  README.md  install.sh  pyproject.toml  reddit_post.md
.github/workflows/: ci.yml  publish.yml
pymanager/: __init__.py  __main__.py  environment_manager.py  registry.py  version_manager.py
pyversion/: __init__.py  __main__.py  environment_manager.py  pip_wrapper.py  registry.py  sync.py  version_manager.py
tests/: conftest.py  test_registry.py  test_sync.py  test_version_manager.py
