[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymanager-cli"
version = "0.1.0"
description = "Automatic Python version and virtualenv manager — one command that just works"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
pymanager = "pymanager.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pymanager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pymanager"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
